5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1871_1711.log
== TEST (2019-07-02 16:02:40) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
y = int(input())
h = 0
for i in range(x.shape(0)):
	if i == y-1:
		h += x[i,:]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:03:29) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
y = int(input())
h = 0
for i in range(shape(x[0])):
	if i == y-1:
		h += x[i,:]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:04:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
for i in range(a):
	if i == y-1:
		h += x[i,:]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:05:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
g = zeros(a,dtype=int)
#for i in range(a):
	#if i == y-1:
		#g[i]= 
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:05:16) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
g = zeros(a,dtype=int)
#for i in range(a):
	#if i == y-1:
		#g[i]= 
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:05:22) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
g = zeros(a,dtype=int)
#for i in range(a):
	#if i == y-1:
		#g[i]= 
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:06:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
g = zeros(a,dtype=int)
for i in range(a):
	if i == y-1:
		g[i,:] = x[i,:]  
h = sum(g)/3
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:06:57) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
g = 0
for i in range(a):
	if i == y-1:
		g += x[i,:]  
h = sum(g)/3
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:07:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
g = 0
for i in range(a):
	if i == y-1:
		g += x[i,:]  
h = sum(g)
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:07:44) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
g = 0
for i in range(a):
	if i == y-1:
		g += x[i,:]  
h = sum(g)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:07:48) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
g = 0
for i in range(a):
	if i == y-1:
		g += x[i,:]  
h = sum(g)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:08:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
g = 0
for i in range(a):
	if i == y-1:
		g[i,:] += x[i,:]  
h = sum(g)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:08:23) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
g = 0
for i in range(a):
	if i == y-1:
		g[i,:] += x[i,:]  
h = sum(g)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:08:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
g = 0
for i in range(a):
	if i == y-1:
		g += x[i,:]  
		print(i)
h = sum(g)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:09:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
g = zeros(a,dtype=int)
for i in range(a):
	if i == y-1:
		g[i]= x[i] 
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:09:44) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
g = zeros(a,dtype=int)
for i in range(a):
	if i == y-1:
		g[i]= x[i] 
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:09:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
g = zeros(a,dtype=int)
for i in range(a):
	if i == y-1:
		g[i]= x[i,:] 
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:10:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
for i in range(a):
	if i == y-1:
		h += x[i,:]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:10:49) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
for i in range(a):
	if i == y-1:
		h += x[y-1,:]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:11:01) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
for i in range(a):
	if i == y-1:
		h += x[y,:]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:11:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
for i in range(a):
	if i == y-1:
		h += x[y,:]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:11:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
for i in range(a):
	if i == y-1:
		h += x[y,:]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:11:37) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
for i in range(a):
	if i == y-1:
		h += x[y,:]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:11:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
for i in range(a):
	if i == y-1:
		h += x[y,:]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:11:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
h = 0
for i in range(a):
	if i == y-1:
		h += x[y,:]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:11:48) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
h = 0
for i in range(a):
	if i == y-1:
		h += x[y,:]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:11:56) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
h = 0
for i in range(a):
	if i == y-1:
		h += x[y,:]
print(range(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:12:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
h = 0
for i in range(a):
	if i == y-1:
		h += x[y,:]
print(y-1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:12:29) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	if i == y:
		h += x[y,:]
print(y-1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:12:31) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	if i == y:
		h += x[y,:]
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:12:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	if i == y:
		h += x[y,:]
print(x[y])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:13:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	if i == y:
		h += x[y,:]
print(x[y])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:13:35) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	if i == y:
		h += x[y,y]
print(x
-- ERROR:
File "XXXX", line 13
    
           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:13:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	if i == y:
		h += x[y,y]
print(x
-- ERROR:
File "XXXX", line 13
    
           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:13:38) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	if i == y:
		h += x[y,y]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:13:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	if i == y:
		h += x[y,y]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:13:51) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	if i == y:
		h += x[y,y]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:15:44) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	if i == y:
		h = sum(x[i,i])
		
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:15:57) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	if i == y:
		h += (x[i,i])
		
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:16:02) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	if i == y:
		h += (x[i,i])
		
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:17:02) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	for j in range(a):
		if j == y and:
			h += (x[:,j])
		
print(h)
-- ERROR:
File "XXXX", line 11
    if j == y and:
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:17:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	for j in range(a):
		if j == y and:
			h += (x[:,j])
		
print(h)
-- ERROR:
File "XXXX", line 11
    if j == y and:
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:17:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	for j in range(a):
		if j == y :
			h += (x[:,j])
		
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:17:15) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	for j in range(a):
		if j == y :
			h = (x[:,j])
		
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:17:37) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	for j in range(a):
		if j == y :
			h = (x[:,j])
f = sum(h)/3
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:18:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	for j in range(a):
		if j == y :
			h = (x[:,j])
f = sum(h)/3
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:18:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	for j in range(a):
		if j == y :
			h = (x[:,j])
f = sum(h)/3
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:18:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	for j in range(a):
		if j == y :
			h = (x[:,j])
f = sum(h)/3
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:18:17) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	for j in range(a):
		if j == y :
			h = (x[:,j])
f = sum(h)/3
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:19:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	for j in range(a):
		if j == y :
			h = (x[:,j])
f = sum(h)/3
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:19:35) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	for j in range(a):
		if j == y :
			h = (x[:,j])
f = sum(h)/3
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- EXECUTION TIME:
1.08411
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:19:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	for j in range(a):
		if j == y :
			h = (x[:,j])
f = sum(h)/3
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:20:26) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
y -= 1
h = 0
for i in range(a):
	for j in range(a):
		if j == y :
			h = (x[:,j])
f = sum(h)/3
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- EXECUTION TIME:
1.10596
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:21:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
h = 0
for j in range(a):
	if j == y-1 :
		h = (x[:,j])
f = sum(h)/3
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:21:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
h = 0
for j in range(a):
	if j == y-1 :
		h = (x[:,j])
f = sum(h)/3
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- EXECUTION TIME:
0.841068
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:21:37) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
h = 0
for j in range(a):
	if j == y-1 :
		h = (x[:,j])
f = sum(h)/3
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:21:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
h = 0
for j in range(a):
	if j == y-1 :
		h = (x[:,j])
f = sum(h)/3
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:22:13) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
h = 0
for j in range(a):
	if j == y-1 :
		h = (x[:,j])
f = sum(h)/3
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:22:16) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
h = 0
for j in range(a):
	if j == y-1 :
		h = (x[:,j])
f = sum(h)/3
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:22:23) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
h = 0
for j in range(a):
	if j == y-1 :
		h = (x[:,j])
f = sum(h)/3
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:22:29) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
h = 0
for j in range(a):
	if j == y-1 :
		h = (x[:,j])
f = sum(h)/3
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:23:13) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
h = 0
if y == 0:
	y += 1
if y > a:
	y -=1
for j in range(a):
	if j == y-1 :
		h = (x[:,j])
f = sum(h)/3
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:23:21) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
h = 0
if y == 0:
	y += 1
if y > a:
	y -=1
for j in range(a):
	if j == y-1 :
		h = (x[:,j])
f = sum(h)/3
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- EXECUTION TIME:
1.2975
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:23:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
h = 0

for j in range(a):
	if j == y-1 :
		h = (x[:,j])
f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:23:52) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
h = 0

for j in range(a):
	if j == y-1 :
		h = (x[:,j])
f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- EXECUTION TIME:
0.990886
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:24:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0

for j in range(a):
	if j == y-1 :
		h = (x[:,j])
f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- EXECUTION TIME:
0.779606
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:24:38) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0

for j in range(a):
	if j == y-1 :
		h = (x[:,j])
f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:25:38) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0

for j in range(a):
	if j == y-1 :
		h = (x[:,j])
f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:27:09) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
if a > 1: 
	for j in range(a):
		if j == y-1 :
			h = (x[:,j])
			f = sum(h)/a
else:
	f = x
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:27:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
y = int(input())
h = 0
if a > 1: 
	a = shape(x)[0]
	for j in range(a):
		if j == y-1 :
			h = (x[:,j])
			f = sum(h)/a
else:
	f = x
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:28:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
h = 0
if a > 1: 
	a = shape(x)[0]
	for j in range(a):
		if j == y-1 :
			h = (x[:,j])
			f = sum(h)/a
else:
	f = x
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:28:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
h = 0
if a > 1: 
	a = shape(x)[0]
	for j in range(a):
		if j == y-1 :
			h = (x[:,j])
			f = sum(h)/a
else:
	f = x
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:28:11) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
h = 0
if a > 1: 
	a = shape(x)[0]
	for j in range(a):
		if j == y-1 :
			h = (x[:,j])
			f = sum(h)/a
else:
	f = x
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:28:43) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0

for j in range(a):
	if j == y-1 :
		h = (x[:,j])
f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:28:48) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0

for j in range(a):
	if j == y-1 :
		h = (x[:,j])
f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:30:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0

for j in range(a):
	if j == y-1 :
		h = (x[:,j])
f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- EXECUTION TIME:
1.13035
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:30:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0

for j in range(a):
	if j == y-1 :
		h = (x[:,j])
f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:31:40) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
f = x/size(x)
if size(x) > 0:
	for j in range(a):
		if j == y-1 :
			h = (x[:,j])
	f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:31:59) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
f = x/size(x)
if size(x) > 0:
	for j in range(a):
		if j == y-1 :
			h = (x[:,j])
	f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- EXECUTION TIME:
1.00914
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:32:00) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
f = x/size(x)
if size(x) > 0:
	for j in range(a):
		if j == y-1 :
			h = (x[:,j])
	f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:32:11) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
f = x/size(x)
if size(x) > 0:
	for j in range(a):
		if j == y-1 :
			h = (x[:,j])
	f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:32:24) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
f = x/size(x)
if size(x) > 0:
	for j in range(a):
		if j == y-1 :
			h = (x[:,j])
	f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:33:24) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
f = x/size(x)
if size(x) > 0:
	for j in range(a):
		if j == y-1 :
			h = (x[:,j])
	f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:33:30) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
f = x/size(x)
if size(x) > 0:
	for j in range(a):
		if j == y-1 :
			h = (x[:,j])
	f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:34:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
f = x/size(x)
if size(x) > 0:
	for j in range(a):
		if j == y-1 :
			h = (x[:,j])
	f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:34:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
f = x/size(x)
if size(x) > 0:
	for j in range(a):
		if j == y-1 :
			h = (x[:,j])
	f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:34:17) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
f = x/size(x)
if size(x) > 0:
	for j in range(a):
		if j == y-1 :
			h = (x[:,j])
	f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:34:22) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
f = x/size(x)
if size(x) > 0:
	for j in range(a):
		if j == y-1 :
			h = (x[:,j])
	f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:34:29) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
f = x/size(x)
if size(x) > 0:
	for j in range(a):
		if j == y-1 :
			h = (x[:,j])
	f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- EXECUTION TIME:
1.23005
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:34:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
f = x/size(x)
if size(x) > 0:
	for j in range(a):
		if j == y :
			h = (x[:,j])
	f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:35:05) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
f = x/size(x)
if size(x) > 0:
	for j in range(a):
		if j == y :
			h = (x[:,j])
	f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- EXECUTION TIME:
0.830889
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:35:06) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
f = x/size(x)
if size(x) > 0:
	for j in range(a):
		if j == y :
			h = (x[:,j])
	f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:35:15) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
f = x/size(x)
if size(x) > 0:
	for j in range(a):
		if j == y :
			h = (x[:,j])
	f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:35:23) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[0]
y = int(input())
h = 0
f = x/size(x)
if size(x) > 0:
	for j in range(a):
		if j == y :
			h = (x[:,j])
	f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:36:24) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
h = 0
f = x/size(x)
if size(x) > 0:
	for j in range(a):
		if j == y :
			h = (x[:,j])
	f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:36:28) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
h = 0
f = x/size(x)
if size(x) > 0:
	for j in range(a):
		if j == y :
			h = (x[:,j])
	f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:36:31) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
h = 0
f = x/size(x)
if size(x) > 0:
	for j in range(a):
		if j == y :
			h = (x[:,j])
	f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:36:37) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
h = 0
f = x/size(x)
if size(x) > 0:
	for j in range(a):
		if j == y :
			h = (x[:,j])
	f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- EXECUTION TIME:
1.04637
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:38:00) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
a = shape(x)[1]
y = int(input())
h = 0

for j in range(a):
	if j == y :
		h = (x[j,:])
f = sum(h)/a
if f >= 5:
	print("PASSOU")
else:
	print("REPROVOU")
-- EXECUTION TIME:
1.05965
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
